2008-03-02  Benjamin Berg  <benjamin@sipsolutions.net>

	* themes/Clearlooks/gtk-2.0/gtkrc:
	Fix the color of prelit menu items in the combobox menu.

2008-03-02  Benjamin Berg  <benjamin@sipsolutions.net>

	* themes/Crux/gtk-2.0/gtkrc:
	* themes/Industrial/gtk-2.0/gtkrc:
	* themes/Mist/gtk-2.0/gtkrc:
	Port the workarounds for GtkComboBox (cell renderer),
	GtkCList/GtkCTree and GtkList to other color scheme supporting
	themes in gtk-engines.

2008-03-02  Benjamin Berg  <benjamin@sipsolutions.net>

	* themes/Clearlooks/gtk-2.0/gtkrc:
	Use the special name menus get for comboboxes to work around the text
	color bug. The old work around breaks radio/check menu items.

2008-03-02  Benjamin Berg  <benjamin@sipsolutions.net>

	* themes/Clearlooks/gtk-2.0/gtkrc:
	Added a workaround for GtkCList/GtkCTree and GtkList text colors.
	Fixes bug #505334 for clearlooks.

2008-03-02  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_style_draw_shadow):
	Override the entry state early enough so that the params are set
	correctly.

2008-03-01  Thomas Wood  <thos@gnome.org>

	* engines/crux/src/crux-draw.c: (paint_button), (draw_box): Only draw an
	extra shadow on widgets with "button" detail, and fix spinbutton padding

2008-03-01  Thomas Wood  <thos@gnome.org>

	* engines/crux/src/crux-draw.c: (draw_extension): Use correct background
	colour according to state_type

2008-03-01  Thomas Wood  <thos@gnome.org>

	* engines/crux/src/crux-draw.c: (paint_shadow), (draw_box_gap):
	Implement all shadow types

2008-02-28  Thomas Wood  <thos@gnome.org>

	* engines/crux/src/crux-draw.c: Improve button border contrast

2008-02-26  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw.c:
	(clearlooks_draw_scrollbar_trough), (clearlooks_draw_menu_frame):
	* engines/clearlooks/src/clearlooks_draw_gummy.c:
	(clearlooks_gummy_draw_scrollbar_stepper):
	* engines/clearlooks/src/clearlooks_style.c: